--- a/404.md
+++ b/404.md
@@ -3,9 +3,7 @@ title: 404
 layout: home
 ---
 
-LOL 404.
-博主正在洗澡
-Nothing found :( Where did you get that link?
+Error 404. Nothing found :( Where did you get that link?
 
 Please go to [homepage](/) or email me:
 
