--- a/404.md
+++ b/404.md
@@ -3,7 +3,7 @@ title: 404
 layout: home
 ---
 
-Error 404. Nothing found :( Where did you get that link?
+ 404. Nothing found :( Where did you get that link?
 
 Please go to [homepage](/) or email me:
 
